@@ -1,5 +1,5 @@
 HomePage
 
-* Document Embedded wiki link
+* Document Embedded wiki link and make sure all the features are documented
 * Fix the com.teaminabox.eclipse.wiki.editors.completion.JavaCompletionProcessor2 and use it
-* Fix the URL matcher
+* Make the functional tests more readable
